--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,19 +26,24 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
 
     //ButterKnife
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     //Moxy
-    implementation 'com.arello-mobile:moxy:1.5.5'
-    implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
-    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.5'
+    implementation 'com.github.moxy-community:moxy:1.0.13'
+    annotationProcessor 'com.github.moxy-community:moxy-compiler:1.0.13'
+//    implementation 'com.github.moxy-community:moxy-android:1.0.13'
+//    implementation 'com.github.moxy-community:moxy-app-compat:1.0.13'
+//    implementation 'com.github.moxy-community:moxy-androidx:1.0.13'
+//    implementation 'com.github.moxy-community:moxy-material:1.0.13'
 
     //RxAndroid+RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
