--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,7 @@ dependencies {
     //Moxy
     implementation 'com.github.moxy-community:moxy:1.0.13'
     annotationProcessor 'com.github.moxy-community:moxy-compiler:1.0.13'
-//    implementation 'com.github.moxy-community:moxy-android:1.0.13'
-//    implementation 'com.github.moxy-community:moxy-app-compat:1.0.13'
-//    implementation 'com.github.moxy-community:moxy-androidx:1.0.13'
-//    implementation 'com.github.moxy-community:moxy-material:1.0.13'
+    implementation 'com.github.moxy-community:moxy-androidx:1.0.13'
 
     //RxAndroid+RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
