--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
 
     // GSON body parser
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    //ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.2'
 }
