--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
 
     //ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.10.2'
+
+    //Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 }
